package com.gildedrose;

interface ItemUpdateStrategy {
    void update(Item item);
}
