package com.gildedrose;

final class SulfurasStrategy implements ItemUpdateStrategy {
    @Override
    public void update(Item item) {
    }
}
